# resevation

./: .env  README.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_status.rs
migrations/: 20230406100410_init.down.sql  20230406101321_reservation.up.sql  20230407061843_reservation_trigger.up.sql  20230407061852_reservation_function.up.sql
reservation/: Cargo.toml  build.rs
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs  test_utils.rs
service/tests/: service.rs
