[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
serde = "1.0.159"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
tonic = { version = "0.9.1", features = ["gzip"] }
tonic-build = "0.9.1"

[build-dependencies]
tonic-build = "0.9.1"
